# python-cli-wallets

./: LICENSE  README.md
V0/: requirements for both.txt  requirements.txt
V0.1/: walletbit.py
V0/bit/: bit_v0.py
V0/bitcoinlib/: bitcoinlib_v01.py
V1/bit V1/: bit_v1.py  requirements bit_v1.txt
V2/bit V2/: bit_v2.py  requirements bit_v2.txt
V2/bitcoinlib V2/: bitcoinlib_v02.py
V3/bit V3/: bit_v3.py  requirements bit_v3.txt
V3/bitcoinlib V3/: Makefile  bitcoinlib_v03.py  requirements.in  requirements.txt
V3/bitcoinlib V3/signer/: Cargo.toml  pyproject.toml
V3/bitcoinlib V3/signer/src/: lib.rs
